# rk3399_mpp_linux

./: CMakeLists.txt  README.md  main.cpp
mpp/: Codec.cpp  Codec.h
rkrga/: RGA.h
